# orion-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  package-lock.json  package.json  pyproject.toml
api/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  TROUBLESHOOTING.md  models.json  orion.db  pyproject.toml
api/src/orion_agent/: __init__.py  main.py
api/src/orion_agent/api/: __init__.py  app.py  auth.py  auth_db.py  deps.py  event_schema.py  session_manager.py  session_manager_db.py  ws_permissions.py
api/src/orion_agent/commands/: __init__.py  registry.py
api/src/orion_agent/compact/: __init__.py  auto.py  reactive.py  strategies.py  tombstone.py
api/src/orion_agent/core/: __init__.py  conversation.py  message_cache.py  query_loop.py  state.py  streaming_executor.py  tool.py  tool_execution.py  tool_orchestration.py
api/src/orion_agent/hooks/: __init__.py  config_manager.py  events.py  frontmatter.py  registry.py
api/src/orion_agent/input/: __init__.py  image.py  process_input.py  upload.py
api/src/orion_agent/llm/: __init__.py  anthropic_provider.py  cache_config.py  catalog.py  events.py  models.json  openai_provider.py  pricing.py  provider.py  types.py
api/src/orion_agent/mcp/: __init__.py  client.py  config.py  elicitation.py  large_output.py  manager.py  oauth.py  schema_to_pydantic.py  tool_wrapper.py  transports.py
api/src/orion_agent/memory/: __init__.py  extract.py  extract_prompts.py  relevance.py  render.py  scan.py  types.py
api/src/orion_agent/migrations/: __init__.py  framework.py  m_01_add_default_model.py  m_02_normalize_mcp_servers.py  m_03_add_permissions_block.py
api/src/orion_agent/multi_agent/: __init__.py  agent_summary.py  coordinator.py  message_bus.py  swarm.py
api/src/orion_agent/output_styles/: __init__.py
api/src/orion_agent/perf/: __init__.py  profiler.py  subprocess_pool.py
api/src/orion_agent/permissions/: __init__.py  decisions.py  persistence.py
api/src/orion_agent/plan_mode/: __init__.py  restrictions.py  state.py
api/src/orion_agent/plugins/: __init__.py  builtin.py  loader.py
api/src/orion_agent/prompt/: __init__.py  assembler.py  context.py  dynamic_sections.py  instructions.py  static_sections.py
api/src/orion_agent/recovery/: __init__.py  transcript.py
api/src/orion_agent/sandbox/: __init__.py  docker_backend.py  factory.py  local.py  protocol.py  proxy_tools.py  sub_agent_isolation.py
api/src/orion_agent/services/: __init__.py  feature_flags.py  forked_agent.py  logging.py  side_query.py  token_estimation.py
api/src/orion_agent/skills/: __init__.py  builtin.py  loader.py
api/src/orion_agent/state/: __init__.py
api/src/orion_agent/storage/: __init__.py  file_history.py  mcp_output.py  paths.py  replacement_state.py  resume.py  secure.py  session.py  tool_result.py  url_cache.py
api/src/orion_agent/telemetry/: __init__.py  cost_tracker.py  diagnostic.py  instrumentation.py  otel.py  pricing.py
api/src/orion_agent/tools/: __init__.py  builtin_set.py
api/tests/: conftest.py
api/tests/integration/: test_anthropic_loop.py  test_openai_loop.py
api/tests/unit/: test_agent_context.py  test_tool_protocol.py
api/tests/unit/api/: test_auth.py  test_chat_ws.py  test_event_schema.py  test_health.py  test_memories_routes.py  test_oauth_routes.py  test_session_delete_cleanup.py  test_session_manager.py  test_sessions.py  test_user_settings_routes.py  test_ws_permissions.py
api/tests/unit/commands/: test_builtin.py  test_registry.py
api/tests/unit/compact/: test_auto.py  test_reactive.py  test_strategies.py  test_tombstone.py
api/tests/unit/core/: test_abort_mid_stream.py  test_conversation_state.py  test_message_cache.py  test_partition_tool_calls.py  test_query_loop_multi_turn.py  test_query_loop_terminate.py  test_run_tools_concurrent.py  test_streaming_executor.py  test_tool_execution.py  test_transitions.py
api/tests/unit/db/: test_auth_db.py  test_db_session_manager.py  test_models.py
api/tests/unit/hooks/: test_config_manager.py  test_events_phase8.py  test_frontmatter.py  test_registry.py  test_registry_phase8.py
api/tests/unit/input/: test_image.py  test_process_input.py  test_slash.py  test_upload.py
api/tests/unit/llm/: test_anthropic_provider.py  test_cache_config.py  test_catalog.py  test_translation_anthropic.py  test_translation_openai.py
api/tests/unit/mcp/: test_config.py  test_large_output.py  test_manager.py  test_mcp_output_storage.py  test_schema_to_pydantic.py  test_tool_wrapper.py
api/tests/unit/memory/: test_extract.py  test_paths.py  test_relevance.py  test_render.py  test_scan.py
api/tests/unit/migrations/: test_framework.py
api/tests/unit/multi_agent/: test_agent_summary.py  test_coordinator.py  test_message_bus.py  test_swarm.py  test_types.py
api/tests/unit/output_styles/: test_loader.py
api/tests/unit/perf/: test_profiler.py  test_subprocess_pool.py
api/tests/unit/permissions/: test_decisions.py  test_persistence.py
api/tests/unit/plan_mode/: test_restrictions.py  test_state.py
api/tests/unit/plugins/: test_loader.py
api/tests/unit/prompt/: test_assembler.py  test_boundary.py  test_context.py  test_instructions.py  test_sections.py  test_static_sections.py
api/tests/unit/recovery/: test_transcript.py
api/tests/unit/sandbox/: test_docker_backend.py  test_factory.py  test_local_backend.py  test_proxy_tools.py  test_sub_agent_isolation.py
api/tests/unit/services/: test_file_state.py  test_forked_agent.py  test_logging.py  test_side_query.py  test_token_estimation.py
api/tests/unit/skills/: test_loader.py
api/tests/unit/state/: test_app_state.py
api/tests/unit/storage/: test_conversation_persistence.py  test_db_message_persistence.py  test_file_history.py  test_file_history_prune.py  test_fk_enforcement.py  test_paths.py  test_persist_size_threshold.py  test_replacement_state.py  test_resume.py  test_secure.py  test_session.py
apps/orion-chat/api/: pyproject.toml
apps/orion-cli/: .env.example  pyproject.toml
apps/orion-cli/tests/: conftest.py
apps/orion-cowork/sidecar/: pyinstaller.spec  pyproject.toml
(+588 files in other folders)
