[project]
name = "orion-agent"
version = "0.1.0"
description = "Multi-LLM agent harness (Claude + OpenAI) — built from scratch, no agent frameworks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Orion Agent" },
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.0",
    "anyio>=4.0",
    "structlog>=24.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "mcp>=1.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27",
    "pyjwt>=2.8",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.19",
    "bcrypt>=4.0",
    "docker>=7.0",
    "python-frontmatter>=1.1",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "apscheduler>=3.10",
    "pyinstrument>=4.6",
    "nbformat>=5.10",
    "cryptography>=42.0",
    "keyring>=24.0",
]

[project.scripts]
orion = "orion_agent.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.6",
    "hypothesis>=6.0",
    "pytest-cov>=5.0",
]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*"]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["frontmatter.*", "nbformat.*", "apscheduler.*", "pyinstrument.*", "keyring.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # allow assert False in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "integration: requires real API keys, skip by default",
]

[tool.coverage.run]
source = ["src/orion_agent"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orion_agent"]
