[project]
name = "orion-cli"
version = "0.1.0"
description = "Terminal CLI for orion-sdk — stdin-based agent loop."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "orion-sdk",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.scripts]
orion = "orion_cli.__main__:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
]

[tool.uv.sources]
orion-sdk = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-v", "--strict-markers", "--tb=short"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orion_cli"]
