[project]
name = "orion-chat-api"
version = "0.1.0"
description = "FastAPI + WebSocket server exposing orion-sdk to remote clients."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "orion-sdk",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
    "typer>=0.12",
]

[project.scripts]
orion-chat-api = "orion_chat_api.cli:main"

[tool.uv.sources]
orion-sdk = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orion_chat_api"]
