[project]
name = "orion-cowork-sidecar"
version = "0.1.0"
description = "Python sidecar bridging Electron main process to orion-sdk via stdio JSON-RPC."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "orion-sdk[browser]",
    "orion-model",
    "python-dotenv>=1.0",
    "croniter>=2.0",
]

[project.scripts]
orion-cowork-sidecar = "orion_cowork_sidecar.__main__:main"

[tool.uv.sources]
orion-sdk = { workspace = true }
orion-model = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orion_cowork_sidecar"]
